Fixed network issue

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ Schedular.log
 /Schedular.log
 Twon-Simulations/Schedular.log
 Twon-Simulations/Ranker.log
+Twon-Simulations/Schedular/Schedular_Experiments.js
